3.1.4
  no analog tv anymore.
3.1.3
  rebuild
3.1.2
  new addon settings option to enable suspend/resume driver actions
3.1.1
  rebuild for OpenELEC-3.2
3.0.6
  rebuild
3.0.5
  fixed "bad substitution" error with busybox/ash
3.0.4
  improved python script for modifying tuners
3.0.3
  added addon settings for modifying tuner type (DVB-C, DVB-T)
3.0.2
  added addon settings
    enable HW PID filter (enabled for RPi by default)
    enable IR receiver
    allow sharing local tuner over network
    use network tuners
  sundtek's binaries are downloaded on first run
  automatically download new version of the binaries if available
  added preload library to .profile (to run mediaclient, w_scan, ... from console)
2.1.4
  support for Raspberry Pi
2.1.3
  support for network tuner
2.1.2
  support for multiple Sundtek tuners
  support for working with other tuners (kernel drivers)
2.1.1
  update to addon version 2.1
2.0.5
  starting userspace DVB drivers from Tvheadend/VDR
1.90.0
  initial version of Sundtek MediaTV DVB driver