@@ -25,3 +25,5 @@
 mkdir -p $ADDON_BUILD/$PKG_ADDON_ID/config/
   cp -P $PKG_DIR/config/* $ADDON_BUILD/$PKG_ADDON_ID/config/
   cp -P $PKG_DIR/settings-default.xml $ADDON_BUILD/$PKG_ADDON_ID/
+  cp -Pa $PKG_BUILD/opt/bin $ADDON_BUILD/$PKG_ADDON_ID/
+  cp -Pa $PKG_BUILD/opt/lib $ADDON_BUILD/$PKG_ADDON_ID/
