@@ -1,0 +1,38 @@
+#!/bin/sh
+################################################################################
+#      This file is part of OpenELEC - http://www.openelec.tv
+#      Copyright (C) 2009-2014 Stephan Raue (stephan@openelec.tv)
+#
+#  OpenELEC is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation, either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  OpenELEC is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with OpenELEC.  If not, see <http://www.gnu.org/licenses/>.
+################################################################################
+
+. config/options
+
+mkdir -p $ROOT/$BUILD/$PKG_NAME-$PKG_VERSION
+cd $ROOT/$BUILD/$PKG_NAME-$PKG_VERSION
+
+case $TARGET_ARCH in
+  i386)
+    INSTALLER_URL="http://sundtek.de/media/netinst/32bit/installer.tar.gz"
+    ;;
+  x86_64)
+    INSTALLER_URL="http://sundtek.de/media/netinst/64bit/installer.tar.gz"
+    ;;
+  arm)
+    INSTALLER_URL="http://sundtek.de/media/netinst/armsysvhf/installer.tar.gz"
+    ;;
+esac
+wget -O installer.tar.gz $INSTALLER_URL
+tar -xzf installer.tar.gz
+chmod 755 opt/bin/*
