@@ -1,5 +1,4 @@
 <settings>
-  <setting id="AUTO_UPDATE" value="false" />
   <setting id="SETTLE_TIME" value="0" />
   <setting id="RUN_USER_SCRIPT" value="false" />
   <setting id="ENABLE_HW_PID_FILTER" value="false" />
