@@ -75,79 +75,6 @@ mkdir -p /var/config
 cat "$SUNDTEK_ADDON_SETTINGS" | awk -F\" '{print $2"=\""$4"\""}' | sed '/^=/d' > /var/config/sundtek-addon.conf
 . /var/config/sundtek-addon.conf
 
-if [ "$AUTO_UPDATE" = "true" -a -f $SUNDTEK_ADDON_DIR/bin/mediasrv ]; then
-  logger -t Sundtek "### Checking for new Sundtek binary installer ###"
-  touch $SUNDTEK_ADDON_HOME/driver-version.txt
-  wget -O /tmp/sundtek-driver-version.txt http://sundtek.de/media/latest.phtml
-  md5_1=$(md5sum -b /tmp/sundtek-driver-version.txt | awk '{print $1}')
-  md5_2=$(md5sum -b $SUNDTEK_ADDON_HOME/driver-version.txt | awk '{print $1}')
-  if [ "$md5_1" != "$md5_2" ]; then
-    logger -t Sundtek "### Updating Sundtek binary installer ###"
-    rm -f $SUNDTEK_ADDON_DIR/bin/mediasrv
-  fi
-
-  rm -f /tmp/sundtek-driver-version.txt
-fi
-
-if [ ! -f $SUNDTEK_ADDON_DIR/bin/mediasrv ]; then
-  # remove renamed addon if exist
-  rm -fr "$HOME/.xbmc/addons/driver.dvb.sundtek"
-  rm -fr "$HOME/userdata/addon_data/driver.dvb.sundtek"
-
-  logger -t Sundtek "### Downloading installer ###"
-  cd $SUNDTEK_ADDON_DIR
-  mkdir -p bin lib tmp
-  cd tmp/
-
-  ARCH=$(sed -n 's|.*\.\([^-]*\)-.*|\1|p' /etc/release | tr -d '\n')
-  if [ "$ARCH" = "x86_64" ]; then
-    INSTALLER_URL="http://sundtek.de/media/netinst/64bit/installer.tar.gz"
-  elif [ "$ARCH" = "i386" ]; then
-    INSTALLER_URL="http://sundtek.de/media/netinst/32bit/installer.tar.gz"
-  elif [ "$ARCH" = "arm" ]; then
-    INSTALLER_URL="http://sundtek.de/media/netinst/armsysvhf/installer.tar.gz"
-
-    # enable HW PID filter on RPi by default
-    sed -i 's|^use_hwpidfilter=.*|use_hwpidfilter=on|g' $SUNDTEK_ADDON_DIR/config/sundtek.conf
-    sed -i 's|^use_hwpidfilter=.*|use_hwpidfilter=on|g' $SUNDTEK_ADDON_HOME/sundtek.conf
-    sed -i 's|.*id="ENABLE_HW_PID_FILTER".*|<setting id="ENABLE_HW_PID_FILTER" value="true" />|' $SUNDTEK_ADDON_DIR/settings-default.xml
-    sed -i 's|.*id="ENABLE_HW_PID_FILTER".*|<setting id="ENABLE_HW_PID_FILTER" value="true" />|' $SUNDTEK_ADDON_SETTINGS
-  else
-    logger -t Sundtek "### Unsupported architecture ###"
-    cd ..
-    rm -fr tmp/
-    exit 1
-  fi
-
-  wget -O installer.tar.gz $INSTALLER_URL
-  wget -O ../driver-version.txt http://sundtek.de/media/latest.phtml
-  logger -t Sundtek "### Extracting installer ###"
-  tar -xzf installer.tar.gz
-  if [ $? -ne 0 ]; then
-    logger -t Sundtek "### Installer damaged ###"
-    cd ..
-    rm -fr tmp/
-    exit 2
-  fi
-
-  cp -Pa opt/bin/* ../bin/
-  cp -Pa opt/lib/* ../lib/
-  cp ../driver-version.txt $SUNDTEK_ADDON_HOME/
-  cd ..
-  rm -fr tmp/
-  logger -t Sundtek "### Installer finished ###"
-
-  cat "$SUNDTEK_ADDON_SETTINGS" | awk -F\" '{print $2"=\""$4"\""}' | sed '/^=/d' > /var/config/sundtek-addon.conf
-  . /var/config/sundtek-addon.conf
-fi
-
-if [ ! -f $SUNDTEK_ADDON_HOME/driver-version.txt ]; then
-  cp $SUNDTEK_ADDON_DIR/driver-version.txt $SUNDTEK_ADDON_HOME/
-fi
-
-# enable to install same addon package version again
-#rm -f /storage/.xbmc/addons/packages/driver.dvb.sundtek*
-
 # add alias for /opt/bin/mediaclient
 alias_set="$(grep libmediaclient.so /storage/.profile 2>/dev/null)"
 if [ -z "$alias_set" ]; then
