@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
   <string id="1000">General</string>
-  <string id="1011">Auto update binary driver</string>
   <string id="1014">Extra delay [sec]</string>
   <string id="1015">Run user script</string>
   <string id="1030">Enable hardware PID filter</string>
