@@ -2,7 +2,6 @@
 <settings>
   <category label="1000" >
     <setting type="sep" />
-    <setting id="AUTO_UPDATE"          type="bool"   label="1011" default="false" />
     <setting id="SETTLE_TIME"          type="number" label="1014" default="0" />
     <setting id="RUN_USER_SCRIPT"      type="bool"   label="1015" default="false" />
     <setting id="ENABLE_HW_PID_FILTER" type="bool"   label="1030" default="false" />
