@@ -1,5 +1,6 @@
 3.1.4
   no analog tv anymore.
+  include driver bin/libs
 3.1.3
   rebuild
 3.1.2
